# veridis

./: .gitignore  .vibe_cache.json  LICENSE  README.md  main.py  pyproject.toml
src/audio/: audio.py  manager.py
src/interface/: style.tcss  tui.py
src/music_player/: __main__.py
src/music_player/audio/: __init__.py  audio.py  manager.py
src/music_player/interface/: style.tcss  tui.py
tests/: test_library.py  test_manager.py
