[tool.poetry]
name = "veridis"
version = "0.1.1"
description = "A fast, lightweight CLI music player built with miniaudio and Textual"
authors = ["Vaibhavtripathi7 <vaibhavtripathi2020@outlook.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "music_player", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
textual = ">=0.80.0"
miniaudio = "^1.59"

[tool.poetry.scripts]
veridis = "music_player.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
